# regex-base-text

./: README.md  regex-base-text.cabal
Text/Regex/Base/: Text.hs
Text/Regex/Base/Text/: Lazy.hs
