name:                regex-base-text
version:             0.1.0
synopsis:            Compatibility layer for using regex-base engines with 'Data.Text'
description:         You don't need this if your engine of choice supports Text.
license:             MIT
license-file:        LICENSE
author:              Oleg Grenrus
maintainer:          Oleg Grenrus <oleg.grenrus@iki.fi>
stability:           experimental
homepage:            https://github.com/phadej/regex-base-text
bug-reports:         https://github.com/phadej/regex-base-text/issues
copyright:           Copyright (c) 2014 Oleg Grenrus
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Text.Regex.Base.Text, Text.Regex.Base.Text.Lazy
  default-extensions:  MultiParamTypeClasses, FlexibleInstances, FlexibleContexts, UndecidableInstances
  build-depends:       base >=4.6 && < 5, regex-base >=0.93 && <0.94, text >=0.11 && <0.12, bytestring >=0.10 && <0.11
  default-language:    Haskell2010
